pub/System/TimeTrackerPlugin/timetracker.css
#timeTracker a {
    cursor: pointer;
}

#timeTracker .hidden {
    display: none;
}
#timeTracker .marginLeft {
    margin-left: 14px;
}
#timeTracker .nobr {
    white-space: nowrap;
    width: intrinsic;           /* Safari/WebKit uses a non-standard name */
    width: -moz-max-content;    /* Firefox/Gecko */
    width: -webkit-max-content; /* Chrome */
}
#timeTracker .nobr * {
    white-space: normal;
}

#timeTracker form {
    display: inline-block;
    background-color: #a1bedd;
    padding: 5px 20px;
    border-spacing: 0px 10px;
}
#timeTracker .table {
    display: table;
}
#timeTracker .row {
    display: table-row;
}
#timeTracker .cell {
    display: table-cell;
}
#timeTracker span.cell {
    padding-right: 10px;
}
#timeTracker form input[type="text"] {
    width: 25em;
}
#timeTracker form input[type="checkbox"] + label {
    margin-left: 0px;
}
#timeTracker input[type="number"].small {
    display: inline-block;
    width: 5em;
}
#timeTracker form label {
    display: inline-block;
    font-size: 0.8rem;
    font-weight: 600;
}
#timeTracker form p.validated {
    background-color: #84bb2e;
}
#timeTracker form p.validated input,
#timeTracker form p.validated select,
#timeTracker tbody tr:not(.booked-redmine) td.validated {
    color: #84bb2e;
}
#timeTracker form p.unvalidated {
    background-color: #a4b8cc;
}
#timeTracker form p.unvalidated input,
#timeTracker form p.unvalidated select,
#timeTracker tbody tr:not(.booked-redmine) td.unvalidated {
    color: #666666;
}


#timeTracker table {
    width: 100%;
    max-width: 1200px;
    border-collapse: separate;
    border-spacing: 0px 10px;
}
#timeTracker th {
    text-align: left;
    padding: 15px 3px;
    background-color: #003c89;
    color: #ffffff;
}
#timeTracker tbody tr:not(.details) {
    background-color: #eeeeee;
    cursor: pointer;
    font-size: 0.9rem;
}
#timeTracker tbody tr:not(.details):hover {
    background-color: #dddddd;
}
#timeTracker tbody tr.running {
    background-color: #cccccc;
}
#timeTracker tbody tr.running:hover {
    background-color: #bbbbbb;
}
#timeTracker tbody tr.booked-manually {
    background-color: #b3ffda;
}
#timeTracker tbody tr.booked-manually:hover {
    background-color: #a2eec9;
}
#timeTracker tbody tr.booked-redmine {
    background-color: #84bb2e;
}
#timeTracker tbody tr.booked-redmine:hover {
    background-color: #73aa1d;
}
#timeTracker span.booked-redmine {
    background-color: white;
    padding: 7px 15px;
    border-radius: 5px;
    color: #24a866;
}
#timeTracker .errored,
#timeTracker #errorMessage,
#timeTracker #refusedMessage {
    background-color: #FF4444 !important;
}
#timeTracker #errorMessage,
#timeTracker #refusedMessage {
    max-width: 1160px;
    padding: 20px;
    font-size: 150%;
    line-height: 150%;
}

#timeTracker .details > td {
    text-align: center;
}
#timeTracker .details > td > div {
    display: inline-block;
    width: 30%;
    margin-left: 10%;
    vertical-align: top;
    text-align: left;
}
#timeTracker .details .edit {
    width: initial;
    margin-left: 0%;
    min-height: 1px;
}
#timeTracker .details table {
    max-width: 400px;
    border-collapse: collapse;
}
#timeTracker .details tr:nth-child(2n) {
    background-color: white;
}
#timeTracker .details table th,
#timeTracker .details table td {
    text-align: center;
}
#timeTracker .details [type="number"]:invalid {
    box-shadow: none;
}

#timeTracker #addActivity form {
    float: left;
    margin-right: 10px;
}

#timeTracker #total {
    max-width: 1200px;
}
#timeTracker #total div {
    float: right;
    padding-left: 20px;
}


#timeTracker #dayList,
#timeTracker #daySelection {
    display: inline-block;
    vertical-align: top;
    margin-right: 5%;
}
#timeTracker #dayList th,
#timeTracker #dayList td,
#timeTracker #daySelection th,
#timeTracker #daySelection td {
    text-align: right;
    padding-right: 50px;
    padding-left: 20px;
}
#timeTracker #daySelection tr {
    cursor: unset;
    background-color: #eeeeee;
}

/* Tooltip from w3schools */
/* Tooltip container */
#timeTracker .tooltip {
    position: relative;
    display: inline-block;
}
/* Tooltip text */
#timeTracker .tooltip .tooltiptext {
    visibility: hidden;
    width: 300px;
    background-color: #555;
    color: #fff;
    text-align: center;
    padding: 5px;
    border-radius: 6px;

    /* Position the tooltip text */
    position: absolute;
    z-index: 1;
    bottom: 125%;
    left: 50%;
    margin-left: -150px;

    /* Fade in tooltip */
    opacity: 0;
    transition: opacity 0.5s;
}
/* Tooltip arrow */
#timeTracker .tooltip .tooltiptext::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: #555 transparent transparent transparent;
}
/* Show the tooltip text when you mouse over the tooltip container */
#timeTracker .tooltip:hover .tooltiptext {
    visibility: visible;
    opacity: 1;
}


/* FlatSkin adjustments */
#timeTracker .flatskin-wrapped .button
    margin: 0px;
}

